--- a/cursos.html
+++ b/cursos.html
@@ -23,7 +23,7 @@
 <!-- Encabezado  -->
 <div id="divisor-encabezado"> 
     <div id="encabezado"> 
-        <img src="/img/encabezado.jpg" alt="" height="-" width="-">
+        <img src="./img/encabezado.jpg" alt="" height="80" width="1200">
     </div>
 </div>                    
                               
@@ -32,7 +32,7 @@
     <div id="nav"> 
         <div class="vinculos">
 
-            <a href="#" class="texto">Home</a> | <a href="/cursos.html" class="texto">Cursos</a> | <a href="mailto:info@aeroclubsnt.com.ar" class="texto">Escribinos</a> | <a href="https://www.instagram.com/aeroclub_snt/" target="_blank" class="texto"> Instagram  </a>
+            <a href="index.html" class="texto">Home</a> | <a href="#" class="texto">Cursos</a> | <a href="mailto:info@aeroclubsnt.com.ar" class="texto">Escribinos</a> | <a href="https://www.instagram.com/aeroclub_snt/" target="_blank" class="texto"> Instagram  </a>
 
         </div>
     </div>
@@ -118,7 +118,7 @@
  
     </div>
            <div id="contenido2">   
-        <img src="/img/cursos.jpg" alt="Imagen con formas aleatorias" width="1200" height="290">
+        <img src="./img/cursos.jpg" alt="Imagen con formas aleatorias" width="1200" height="290">
   
 </div>
 </div>
@@ -128,7 +128,7 @@
 
 <div id="divisor-footer"> 
     <div id="footer">
-       <a href="#"> <img src="/img/footer.jpg" alt="" height="90" width="1200"></a>
+       <a href="#"> <img src="./img/footer.jpg" alt="" height="90" width="1200"></a>
     </div>
 </div>
 
