--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- Encabezado  -->
 <div id="divisor-encabezado"> 
     <div id="encabezado"> 
-        <img src="/img/encabezado.jpg" alt="" height="-" width="-">
+        <img src="./img/encabezado.jpg" alt="" height="80" width="1200">
     </div>
 </div>                    
                               
@@ -32,7 +32,7 @@
     <div id="nav"> 
         <div class="vinculos">
 
-            <a href="#" class="texto">Home</a> | <a href="/cursos.html" class="texto">Cursos</a> | <a href="mailto:info@aeroclubsnt.com.ar" class="texto">Escribinos</a> | <a href="https://www.instagram.com/aeroclub_snt/" target="_blank" class="texto"> Instagram  </a>
+            <a href="#" class="texto">Home</a> | <a href="cursos.html" class="texto">Cursos</a> | <a href="mailto:info@aeroclubsnt.com.ar" class="texto">Escribinos</a> | <a href="https://www.instagram.com/aeroclub_snt/" target="_blank" class="texto"> Instagram  </a>
 
         </div>
     </div>
@@ -63,7 +63,7 @@
 
             </div>
             <div id="dere"> 
-             <img src="/img/baut.jpg" alt="imagen de avioneta en un campo abierto ubicado en Areco" width="284" height="620">
+             <img src="./img/baut.jpg" alt="imagen de avioneta en un campo abierto ubicado en Areco" width="284" height="620">
              </div>                               
 
          </div>
@@ -84,8 +84,9 @@
 
                 </div>
                     <div id="dere2">
-                        <img src="/img/gif-btms.gif" alt="Gig animado, las fotos pasan donde se ve a el piloto, otra donde se ve una vioneta y un texto donde invita a volar 'Vení a volar'" width="284" height="620">
-
+                        <a href="vola.html">
+                        <img src="./img/gif-btms.gif" alt="Gig animado, las fotos pasan donde se ve a el piloto, otra donde se ve una vioneta y un texto donde invita a volar 'Vení a volar'" width="284" height="620">
+                        </a>
                     </div>
             </div>                              
     </div>
@@ -100,7 +101,7 @@
 
 <div id="divisor-footer"> 
     <div id="footer">
-       <a href="#"> <img src="/img/footer.jpg" alt="" height="90" width="1200"></a>
+       <a href="#"> <img src="./img/footer.jpg" alt="" height="90" width="1200"></a>
     </div>
 </div>
 
