--- a/vola.html
+++ b/vola.html
@@ -24,7 +24,7 @@
     <!-- Encabezado  -->
     <div id="divisor-encabezado">
       <div id="encabezado">
-        <img src="/img/encabezado.jpg" alt="" height="-" width="-" />
+        <img src="./img/encabezado.jpg" alt="" height="80" width="1200" />
       </div>
     </div>
 
@@ -32,7 +32,7 @@
     <div id="divisor-navegacion">
       <div id="nav">
         <div class="vinculos">
-                      <a href="#" class="texto">Home</a> | <a href="/cursos.html" class="texto">Cursos</a> | <a href="mailto:info@aeroclubsnt.com.ar" class="texto">Escribinos</a> | <a href="https://www.instagram.com/aeroclub_snt/" target="_blank" class="texto"> Instagram  </a>
+                      <a href="index.html" class="texto">Home</a> | <a href="cursos.html" class="texto">Cursos</a> | <a href="mailto:info@aeroclubsnt.com.ar" class="texto">Escribinos</a> | <a href="https://www.instagram.com/aeroclub_snt/" target="_blank" class="texto"> Instagram  </a>
 
         </div>
       </div>
@@ -56,7 +56,7 @@
             <div id="colum">
               <div id="izquierda">
                 <img class="borde"
-                  src="/img/vola1.jpg"
+                  src="./img/vola1.jpg"
                   alt="Imagen con formas aleatorias"
                   width="596"
                   height="310"
@@ -65,7 +65,7 @@
 
               <div id="derecha">
                 <img class="borde"
-                  src="/img/vola2.jpg"
+                  src="./img/vola2.jpg"
                   alt="Imagen con formas aleatorias"
                   width="596"
                   height="310"
@@ -77,7 +77,7 @@
             
             <div id="contenido">
               <img class="margen"
-                src="/img/volaclear.jpg"
+                src="./img/volaclear.jpg"
                 alt="Imagen con formas aleatorias"
                 width="1200"
                 height="296"
@@ -90,7 +90,7 @@
 
 <div id="divisor-footer"> 
     <div id="footer">
-       <a href="#"> <img src="/img/footer.jpg" alt="" height="90" width="1200"></a>
+       <a href="#"> <img src="./img/footer.jpg" alt="" height="90" width="1200"></a>
     </div>
 </div>
   </body>
